Changes on generic_metric and mode_specific_metrics in relation to Mo… (#91)
* Changes on generic_metric and mode_specific_metrics in relation to Mode_confirm mapping with dynamic labels.

* Address Review comments.

* Update generate_plots.py & scaffolding.py

* Fix merge conflict.

* Fix scaffolding, updated mode_specific_metrics.ipynb.

* Revert version changes to 3.7.12.

* Update initialization of dynamic_labels from { } to json object referenced from example-study-label-options.json

* Default initialize dynamic_labels to { }.

* Add an environment variable in Docker Compose to pass dynamic config.

* Chang in docker-compose for STUDY_CONFIG to dev-emulator-study. Reverted changes for DYNAMIC_CONFIG back to STUDY_CONFIG from generate_plots.py

* Change back docker-compose.dev.yml: STUDY_CONFIG to stage-program.

* Replace Mode_confirm with Replaced_mode for barplot_mode() in mode_specific_metrics.ipynb

* 1. Remove extraneous whitespace from generate_plots.py. 2. Revert refactoring colour -> color in plots.py

* Remove extraneous whitespace from line 96 in generate_plots.py

* Introduce defaultdic for dic_translations with Other in analogy to dic_re in scaffolding.py.

* Handle initialization of mode_count_interest. Introduce try-except block to handle raise RuntimeError error.

* Move quality_text code into the if block in the above cell.

* Update log messages for dynamic_labels_url and label_options unavailable cases.

* Update scaffolding to introduce compute_CO2_impact_kg() computation when dynamic label is available.

* 1. Change the plots.py X-axis to showcase CO2 Impact in kg. 2. In scaffolding.py update conversion from lb to kg for final return of CO2_Impact(kg). 3. Update energy_calculations to call new function compute_CO2_impact_kg when dynamic label is available for direct kgCO2 computation.

* Move the compute_CO2_impact_kg() call to scaffolding, such that energy_impact is computed regardless.

* Changes 

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -27,7 +27,8 @@
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
-    "include_test_users = False"
+    "include_test_users = False\n",
+    "dynamic_labels = {}"
    ]
   },
   {
@@ -85,9 +86,10 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            include_test_users=include_test_users)\n",
-    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
+    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel, dynamic_labels) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
    ]
   },
   {
@@ -103,9 +105,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get timestamp from known year/month/day aggregated to days\n",
-    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
-    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "if len(dynamic_labels) > 0:\n",
+    "    # Get timestamp from known year/month/day aggregated to days\n",
+    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
+    "else:\n",
+    "    # Get timestamp from known year/month/day aggregated to days\n",
+    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
     "elif \"Mode_confirm\" not in expanded_ct.columns:\n",
@@ -123,8 +131,11 @@
     "    data.date_time = pd.Categorical(data.date_time)\n",
     "    \n",
     "    if \"Mode_confirm\" in expanded_ct.columns:\n",
-    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
-    "\n",
+    "        if (len(dynamic_labels) > 0):\n",
+    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, \"MODE\")\n",
+    "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
+    "        else:\n",
+    "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "data.head()"
    ]
   },
@@ -136,6 +147,30 @@
    },
    "outputs": [],
    "source": [
+    "def compute_daily_metrics(data, weight_unit, distance_unit):\n",
+    "    # Sum daily distance traveled for each mode\n",
+    "    mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[[distance_unit]].sum()\n",
+    "    mode_distance.rename(columns={'sum':distance_unit}, inplace=True)\n",
+    "    mode_distance[distance_unit] = mode_distance[distance_unit].fillna(0)\n",
+    "    \n",
+    "    # Sum daily emissions for each user\n",
+    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'Mode_confirm_{weight_unit}_CO2', distance_unit]].sum()\n",
+    "    emissions[f'Mode_confirm_{weight_unit}_CO2'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    emissions[distance_unit] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    \n",
+    "    # Sum daily energy for each user\n",
+    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', distance_unit]].sum()\n",
+    "    energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    energy[distance_unit] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    \n",
+    "    # Add 7-day rolling avg smoothing to better see trends\n",
+    "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    mode_distance[f'{distance_unit}_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    emissions[f'{distance_unit}_smooth'] = emissions.groupby(['user_id'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    energy[f'{distance_unit}_smooth'] = energy.groupby(['user_id'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
+    "\n",
+    "    return mode_counts, mode_distance, emissions, energy\n",
+    "\n",
     "if len(expanded_ct) > 0:\n",
     "    # Get the count of unique users that were active on each given date\n",
     "    active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
@@ -146,26 +181,10 @@
     "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
-    "        # Sum daily distance traveled for each mode\n",
-    "        mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
-    "        mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
-    "        mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
-    "\n",
-    "        # Sum daily emissions for each user\n",
-    "        emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
-    "        emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "        emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "\n",
-    "        # Sum daily energy for each user\n",
-    "        energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
-    "        energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "        energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "\n",
-    "        # Add 7-day rolling avg smoothing to better see trends\n",
-    "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
+    "        if (len(dynamic_labels)) > 0:\n",
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics(data, weight_unit = 'kg', distance_unit = 'distance')\n",
+    "        else:\n",
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')"
    ]
   },
   {
@@ -191,16 +210,23 @@
     "plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "\n",
-    "try:\n",
+    "def plot_emission_per_week(emissions, unit, active_users):\n",
     "    # Emissions per week across all users (net impact)\n",
-    "    plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_lb_CO2'].agg(['sum'])\n",
+    "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'Mode_confirm_{unit}_CO2'].agg(['sum'])\n",
+    "    total_sum = plot_data['sum'].sum()\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Emissions (lb CO2/day/user)'\n",
+    "    ylab = f'Emissions ({unit} CO2/day/user)'\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "\n",
+    "try:\n",
+    "    if (len(dynamic_labels)) > 0:\n",
+    "        plot_emission_per_week(emissions, 'kg', active_users)\n",
+    "    else:\n",
+    "        plot_emission_per_week(emissions, 'lb', active_users)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -219,29 +245,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = 'Net Daily Energy (All Users, excluding air)'\n",
-    "file_name = \"ts_energy_user%s\"%file_suffix\n",
+    "if (len(dynamic_labels) == 0):\n",
+    "    plot_title_no_quality = 'Net Daily Energy (All Users, excluding air)'\n",
+    "    file_name = \"ts_energy_user%s\"%file_suffix\n",
     "\n",
-    "try:\n",
-    "    # Energy per week across all users (net impact)\n",
-    "    plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
-    "    plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "    try:\n",
+    "        # Energy per week across all users (net impact)\n",
+    "        plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
+    "        plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Energy (kWH/day/user)'\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        ylab = 'Energy (kWH/day/user)'\n",
+    "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Emissions per mile per day"
+    "### Emissions per mile/kilometer per day"
    ]
   },
   {
@@ -253,20 +280,26 @@
     "plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
     "\n",
-    "try:\n",
-    "    # Emissions per mile per day across all users (travel efficiency)\n",
+    "def plot_emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth,):\n",
+    "    # Emissions per kilometer per day across all users (travel efficiency)\n",
     "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "    emissions['CO2_per_mile'] = emissions['Mode_confirm_lb_CO2'] / emissions['distance_miles_smooth']\n",
-    "    emissions['CO2_per_mile'] = emissions['CO2_per_mile'].fillna(0)\n",
-    "    plot_data = emissions.groupby(['date_time'])['CO2_per_mile'].agg(['mean']).reset_index()\n",
-    "\n",
+    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
+    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'CO2_per_{distance_unit}'].fillna(0)\n",
+    "    plot_data = emissions.groupby(['date_time'])[f'CO2_per_{distance_unit}'].agg(['mean']).reset_index()\n",
+    "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Emissions (lb CO2/mile/day)'\n",
+    "    ylab = f'Emissions ({weight_unit} CO2/{distance_unit}/day)'\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "\n",
+    "try:\n",
+    "    if (len(dynamic_labels) > 0):\n",
+    "        plot_emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
+    "    else:\n",
+    "        plot_emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth')\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -332,11 +365,14 @@
     "    total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
     "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
     "    plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
-    "\n",
     "    # Re-establish categorical variable to not include Other and Non-trips\n",
     "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
-    "    plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "\n",
+    "    if (len(dynamic_labels) > 0):\n",
+    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type = \"MODE\")\n",
+    "            plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
+    "    else:\n",
+    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Proportion of All Trips'\n",
     "    legend_title = 'Confirmed Mode'\n",
