--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -30,7 +30,8 @@
     "program = \"default\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
-    "include_test_users = False"
+    "include_test_users = False\n",
+    "dynamic_labels = { }"
    ]
   },
   {
@@ -102,6 +103,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
@@ -266,7 +268,7 @@
     "    y2 = \"Count\"\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_mode(data,x,y,plot_title,file_name)\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
