--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -27,7 +27,8 @@
     "program = \"default\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
-    "include_test_users = False"
+    "include_test_users = False\n",
+    "dynamic_labels = { }"
    ]
   },
   {
@@ -95,6 +96,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
@@ -177,20 +179,13 @@
     "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
     "        mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()\n",
-    "        \n",
+    "\n",
     "        # Mapping new mode labels with dictionaries\n",
     "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
     "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
-    "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quality_text = scaffolding.get_quality_text(expanded_ct, mode_counts_interest, mode_of_interest, include_test_users)"
+    "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)\n",
+    "        quality_text = scaffolding.get_quality_text(expanded_ct, mode_counts_interest, mode_of_interest, include_test_users)\n",
+    "        "
    ]
   },
   {
