Replaced biogeme modeling code

--- a/viz_scripts/rm_src/biogeme_modeling.ipynb
+++ b/viz_scripts/rm_src/biogeme_modeling.ipynb
@@ -10,9 +10,11 @@
     "import biogeme.biogeme as bio\n",
     "import biogeme.database as db\n",
     "from biogeme import models\n",
-    "from biogeme.expressions import Beta\n",
+    "from biogeme.expressions import Beta, DefineVariable\n",
     "from biogeme.expressions import Variable\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -36,7 +38,7 @@
     "\n",
     "# Drop section_mode_argmax and available_modes.\n",
     "data.drop(columns=[\n",
-    "    'section_mode_argmax', 'available_modes', 'section_distance_argmax', 'section_duration_argmax'\n",
+    "    'section_mode_argmax', 'available_modes', 'section_duration_argmax', 'section_distance_argmax'\n",
     "    ], inplace=True)\n",
     "\n",
     "data['user_id'] = data['user_id'].apply(lambda x: USER_MAP[x])"
@@ -49,7 +51,14 @@
    "outputs": [],
    "source": [
     "# Convert from min -> hrs\n",
-    "data[[c for c in data.columns if 'tt_' in c]] /= 60."
+    "data[[c for c in data.columns if 'tt_' in c]] /= 60.\n",
+    "\n",
+    "# Scale costs using StandardScaler.\n",
+    "costs = data[[c for c in data.columns if 'cost_' in c]].copy()\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "cost_scaled = pd.DataFrame(scaler.fit_transform(costs), columns=['scaled_' + c for c in costs.columns], index=costs.index)\n",
+    "data = data.merge(right=cost_scaled, left_index=True, right_index=True)"
    ]
   },
   {
@@ -58,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale currency by 1/10.\n",
-    "data[[c for c in data.columns if 'cost_' in c]] /= 10."
+    "data.head()"
    ]
   },
   {
@@ -68,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(data[[c for c in data.columns if 'tt_' in c]].describe())\n",
-    "display(data[[c for c in data.columns if 'cost_' in c]].describe())"
+    "# display(data[[c for c in data.columns if 'tt_' in c]].describe())\n",
+    "# display(data[[c for c in data.columns if 'cost_' in c]].describe())"
    ]
   },
   {
@@ -137,18 +145,23 @@
     "TT_UNKNOWN = Variable('tt_unknown')\n",
     "\n",
     "# Cost.\n",
-    "CO_P_MICRO = Variable('cost_p_micro')\n",
-    "CO_NO_TRIP = Variable('cost_no_trip')\n",
-    "CO_S_CAR = Variable('cost_s_car')\n",
-    "CO_TRANSIT = Variable('cost_transit')\n",
-    "CO_CAR = Variable('cost_car')\n",
-    "CO_S_MICRO = Variable('cost_s_micro')\n",
-    "CO_RIDEHAIL = Variable('cost_ridehail')\n",
-    "CO_WALK = Variable('cost_walk')\n",
-    "CO_UNKNOWN = Variable('cost_unknown')\n",
+    "CO_P_MICRO = Variable('scaled_cost_p_micro')\n",
+    "CO_NO_TRIP = Variable('scaled_cost_no_trip')\n",
+    "CO_S_CAR = Variable('scaled_cost_s_car')\n",
+    "CO_TRANSIT = Variable('scaled_cost_transit')\n",
+    "CO_CAR = Variable('scaled_cost_car')\n",
+    "CO_S_MICRO = Variable('scaled_cost_s_micro')\n",
+    "CO_RIDEHAIL = Variable('scaled_cost_ridehail')\n",
+    "CO_WALK = Variable('scaled_cost_walk')\n",
+    "CO_UNKNOWN = Variable('scaled_cost_unknown')\n",
     "\n",
     "# Choice.\n",
-    "CHOICE = Variable('chosen')"
+    "CHOICE = Variable('chosen')\n",
+    "\n",
+    "# Exclusion. Choice must not be equal to or either 2 or 9.\n",
+    "EXCLUDE = (CHOICE == 2) + (CHOICE == 9) > 0\n",
+    "\n",
+    "database.remove(EXCLUDE)"
    ]
   },
   {
@@ -163,18 +176,18 @@
     "# but we would like to constrain the ceil to 0 since we want these coefficients to denote the utiltiy function.\n",
     "# Finally, we want this parameter to be updated by the optimization algorithm.\n",
     "B_TIME = Beta('B_TIME', 0, None, 0, 0)\n",
-    "B_COST = Beta('B_COST', 0, None, 0, 0)\n",
+    "B_COST = Beta('B_COST', 0, None, None, 0)\n",
     "\n",
     "# Alternative-Specific Constants.\n",
     "ASC_P_MICRO = Beta('ASC_P_MICRO', 0, None, None, 0)\n",
-    "ASC_NO_TRIP = Beta('ASC_NO_TRIP', 0, None, None, 1)\n",
+    "ASC_NO_TRIP = Beta('ASC_NO_TRIP', 0, None, None, 0)\n",
     "ASC_S_CAR = Beta('ASC_S_CAR', 0, None, None, 0)\n",
     "ASC_TRANSIT = Beta('ASC_TRANSIT', 0, None, None, 0)\n",
     "ASC_CAR = Beta('ASC_CAR', 0, None, None, 0)\n",
     "ASC_S_MICRO = Beta('ASC_S_MICRO', 0, None, None, 0)\n",
     "ASC_RIDEHAIL = Beta('ASC_RIDEHAIL', 0, None, None, 0)\n",
     "ASC_WALK = Beta('ASC_WALK', 0, None, None, 0)\n",
-    "ASC_UNKNOWN = Beta('ASC_UNKNOWN', 0, None, None, 1)"
+    "ASC_UNKNOWN = Beta('ASC_UNKNOWN', 0, None, None, 0)"
    ]
   },
   {
@@ -186,10 +199,11 @@
     "# Define the utility functions.\n",
     "# number of alternatives = number of UFs.\n",
     "\n",
+    "# Not multiplying by cost.\n",
     "V_P_MICRO = (\n",
     "    ASC_P_MICRO +\n",
-    "    B_TIME * TT_P_MICRO +\n",
-    "    B_COST * CO_P_MICRO\n",
+    "    B_TIME * TT_P_MICRO\n",
+    "    + B_COST * CO_P_MICRO\n",
     ")\n",
     "\n",
     "V_NO_TRIP = (\n",
@@ -199,9 +213,9 @@
     ")\n",
     "\n",
     "V_S_CAR = (\n",
-    "    ASC_CAR +\n",
-    "    B_TIME * TT_CAR +\n",
-    "    B_COST * CO_CAR\n",
+    "    ASC_S_CAR +\n",
+    "    B_TIME * TT_S_CAR +\n",
+    "    B_COST * CO_S_CAR\n",
     ")\n",
     "\n",
     "V_TRANSIT = (\n",
@@ -228,10 +242,11 @@
     "    B_COST * CO_RIDEHAIL\n",
     ")\n",
     "\n",
+    "# Cost is 0, so no point multiplying.\n",
     "V_WALK = (\n",
     "    ASC_WALK +\n",
-    "    B_TIME * TT_WALK +\n",
-    "    B_COST * CO_WALK\n",
+    "    B_TIME * TT_WALK\n",
+    "    + B_COST * CO_WALK\n",
     ")\n",
     "\n",
     "V_UNKNOWN = (\n",
@@ -301,7 +316,7 @@
    "outputs": [],
    "source": [
     "model = bio.BIOGEME(database, logprob)\n",
-    "model.modelName = 'noMaskNoTrip'"
+    "model.modelName = 'linearModelCostsModel'"
    ]
   },
   {
@@ -337,7 +352,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.getCorrelationResults()"
+    "def generate_metrics(model: bio.BIOGEME, database: db.Database, V: dict):\n",
+    "    \"\"\"\n",
+    "    Given a test dataframe and the trained model, generate precision, recall, F1.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    predictions = list()\n",
+    "\n",
+    "    for row_ix in range(data.shape[0]):\n",
+    "        preds = dict()\n",
+    "        for alt_id, utility in V.items():\n",
+    "            preds[alt_id] = utility.getValue_c(database)\n",
+    "        \n",
+    "        predictions.append(preds)\n",
+    "    return pd.DataFrame(predictions)"
    ]
   },
   {
@@ -346,13 +374,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_metrics(model: bio.BIOGEME, data: pd.DataFrame):\n",
-    "    \"\"\"\n",
-    "    Given a test dataframe and the trained model, generate precision, recall, F1.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    pass"
+    "results.getBetaValues()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_utility_df(results, data):\n",
+    "\n",
+    "    '''  \n",
+    "    1: V_P_MICRO, \n",
+    "    2: V_NO_TRIP,\n",
+    "    3: V_S_CAR, \n",
+    "    4: V_TRANSIT,\n",
+    "    5: V_CAR, \n",
+    "    6: V_S_MICRO,\n",
+    "    7: V_RIDEHAIL, \n",
+    "    8: V_WALK, \n",
+    "    # 9: V_UNKNOWN\n",
+    "    # '''\n",
+    "\n",
+    "    def compute_utilities(betas, row: pd.Series):\n",
+    "        data = row.to_dict()\n",
+    "\n",
+    "        utility_p_micro = betas['ASC_P_MICRO'] + (betas['B_TIME'] * data['tt_p_micro'])\n",
+    "        utility_no_trip = betas['ASC_NO_TRIP'] + (betas['B_TIME'] * data['tt_no_trip']) + (betas['B_COST'] * data['scaled_cost_no_trip'])\n",
+    "        utility_s_car = betas['ASC_S_CAR'] + (betas['B_COST'] * data['scaled_cost_s_car']) + (betas['B_TIME'] * data['tt_s_car'])\n",
+    "        utility_transit = betas['ASC_TRANSIT'] + (betas['B_COST'] * data['scaled_cost_transit']) + (betas['B_TIME'] * data['tt_transit'])\n",
+    "        utility_car = betas['ASC_CAR'] + (betas['B_COST'] * data['scaled_cost_car'] + (betas['B_TIME'] * data['tt_car']))\n",
+    "        utility_s_micro = betas['ASC_S_MICRO'] + (betas['B_COST'] * data['scaled_cost_s_micro']) + (betas['B_TIME'] * data['tt_s_micro'])\n",
+    "        utility_ridehail = betas['ASC_RIDEHAIL'] + (betas['B_COST'] * data['scaled_cost_ridehail']) + (betas['B_TIME'] * data['tt_ridehail'])\n",
+    "        utility_walk = betas['ASC_WALK'] + (betas['B_TIME'] * data['tt_walk'])\n",
+    "        utility_unknown = betas['ASC_UNKNOWN'] + (betas['B_TIME'] * data['tt_unknown']) + (betas['B_COST'] * data['scaled_cost_unknown'])\n",
+    "\n",
+    "        return {\n",
+    "            'utility_p_micro': utility_p_micro, 'utility_no_trip': utility_no_trip,\n",
+    "            'utility_s_car': utility_s_car, 'utility_transit': utility_transit,\n",
+    "            'utility_car': utility_car, 'utility_s_micro': utility_s_micro,\n",
+    "            'utility_ridehail': utility_ridehail, 'utility_walk': utility_walk, \n",
+    "            'utility_unknown': utility_unknown, \n",
+    "        }\n",
+    "    \n",
+    "    betas = results.getBetaValues()\n",
+    "\n",
+    "    u_data = data.apply(lambda x: compute_utilities(betas, x), axis=1).tolist()\n",
+    "    return pd.DataFrame(u_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_df = get_utility_df(results, database.fullData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_np = u_df.values\n",
+    "choice_df = np.exp(u_np)/np.sum(np.exp(u_np), axis=1, keepdims=True)\n",
+    "\n",
+    "choice_df = pd.DataFrame(choice_df, columns=u_df.columns)\n",
+    "display(choice_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "y_pred = np.argmax(choice_df.values, axis=1) + 1\n",
+    "\n",
+    "print(np.unique(y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.Series(y_pred).hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# labels are 1-9\n",
+    "y_true = data.chosen\n",
+    "\n",
+    "pd.Series(y_true).hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = f1_score(y_true, y_pred, average='weighted')\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
