--- a/viz_scripts/CanBikeCO_DataFiltering.ipynb
+++ b/viz_scripts/CanBikeCO_DataFiltering.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "6139da5c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "612c368d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "b1606878",
    "metadata": {},
    "outputs": [
@@ -71,14 +71,14 @@
        "235"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#read in the raw csv -- all labeled trips?\n",
-    "data = pd.read_csv(\"auxiliary_files/trip_program.csv\")\n",
+    "data = pd.read_csv(\"trip_program.csv\")\n",
     "print(len(data)) #92395\n",
     "data['user_id'].nunique() #235"
    ]
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "ab83b18e",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "83703424",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "164"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "c254747b",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "array(['4c', 'cc', 'fc', 'pc', 'sc', 'vail'], dtype=object)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "id": "79f074c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "expanded_ct = data.copy()\n",
-    "socio_data = pd.read_csv(\"auxiliary_files/Can Do Colorado eBike Program - en.csv\")\n",
+    "socio_data = pd.read_csv(\"Can Do Colorado eBike Program - en.csv\")\n",
     "socio_data.rename(columns={'Unique User ID (auto-filled, do not edit)':'user_id',\n",
     "                          'Please identify which category represents your total household income, before taxes, for last year.':'HHINC',\n",
     "                          'How many motor vehicles are owned, leased, or available for regular use by the people who currently live in your household?':'VEH',\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "id": "209a277b",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "id": "ffc7e547",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "66494032",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "0eb32fa4",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "id": "57a92f6a",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "id": "043281f6",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "id": "5f694b05",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "id": "a9733292",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "id": "0c425ea7",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_160/3643144510.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_21/3643144510.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -535,23 +535,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "id": "7ff39352",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "10\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_160/4259660508.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_21/4259660508.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -563,6 +555,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "10\n",
+      "10\n",
       "10\n"
      ]
     }
@@ -590,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "id": "d9e00678",
    "metadata": {},
    "outputs": [
@@ -598,7 +592,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_160/1138286727.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_21/1138286727.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -639,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "id": "ee513f85",
    "metadata": {},
    "outputs": [
@@ -647,7 +641,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_160/1774079327.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_21/1774079327.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -688,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "id": "7f1a3bbe",
    "metadata": {},
    "outputs": [
@@ -696,7 +690,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_160/950012586.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_21/950012586.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -737,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "id": "31457b29",
    "metadata": {},
    "outputs": [
@@ -745,7 +739,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_160/3916199498.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_21/3916199498.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -786,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f1ba436d",
    "metadata": {},
    "outputs": [],
@@ -796,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 30,
    "id": "6c05dc74",
    "metadata": {},
    "outputs": [
@@ -838,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "id": "3c25973d",
    "metadata": {},
    "outputs": [
@@ -880,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "id": "40d77bc9",
    "metadata": {},
    "outputs": [
@@ -973,19 +967,20 @@
        "max         49.929320    479.495935"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Summary statistics table #MOVE TO ANALYSIS NOTEBOOK\n",
-    "mode_of_interest = 'E-bike'\n",
-    "data_eb = filtered_merged.query(f\"mode_confirm == '{mode_of_interest}'\")\n",
-    "print(len(pd.unique(filtered_merged.user_id)))\n",
-    "stat_data = filtered_merged[['distance_miles','duration']]\n",
-    "stat_data.describe()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ebb4bba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
