checking in before mongo crashes everything

--- a/viz_scripts/CanBikeCO_DataFiltering.ipynb
+++ b/viz_scripts/CanBikeCO_DataFiltering.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "6139da5c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "612c368d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b1606878",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "235"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "ab83b18e",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "83703424",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "164"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c254747b",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "array(['4c', 'cc', 'fc', 'pc', 'sc', 'vail'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "79f074c1",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "209a277b",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "ffc7e547",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "66494032",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "0eb32fa4",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "57a92f6a",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "043281f6",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "5f694b05",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "a9733292",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "0c425ea7",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21/3643144510.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_114/3643144510.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "7ff39352",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21/4259660508.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_114/4259660508.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "d9e00678",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21/1138286727.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_114/1138286727.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "ee513f85",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21/1774079327.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_114/1774079327.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "7f1a3bbe",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21/950012586.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_114/950012586.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "31457b29",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21/3916199498.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_114/3916199498.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "f1ba436d",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "6c05dc74",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "3c25973d",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
+   "id": "d616fab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['source', 'end_ts', 'end_fmt_time', 'end_loc', 'raw_trip', 'start_ts',\n",
+       "       'start_fmt_time', 'start_loc', 'duration', 'distance', 'start_place',\n",
+       "       'end_place', 'cleaned_trip', 'inferred_labels', 'inferred_trip',\n",
+       "       'expectation', 'confidence_threshold', 'expected_trip', 'user_input',\n",
+       "       'year', 'month', 'day', 'start_local_dt_hour', 'start_local_dt_minute',\n",
+       "       'start_local_dt_second', 'start_local_dt_weekday',\n",
+       "       'start_local_dt_timezone', 'end_local_dt_year', 'end_local_dt_month',\n",
+       "       'end_local_dt_day', 'end_local_dt_hour', 'end_local_dt_minute',\n",
+       "       'end_local_dt_second', 'end_local_dt_weekday', 'end_local_dt_timezone',\n",
+       "       '_id', 'user_id', 'metadata_write_ts', 'mode_confirm',\n",
+       "       'purpose_confirm', 'replaced_mode', 'distance_miles', 'Mode_confirm',\n",
+       "       'Replaced_mode', 'Trip_purpose', 'user_id_str', 'program', 'opcode',\n",
+       "       'distance_km', 'user_id_socio', 'Timestamp', 'AGE', 'GENDER',\n",
+       "       'Do you have a valid driver's license?', 'STUDENT',\n",
+       "       'What is the highest grade or degree that you have completed?',\n",
+       "       'Do you work for either pay or profit?',\n",
+       "       'Do you have more than one job?',\n",
+       "       'Do you work full-time or part-time at your primary job?',\n",
+       "       'Which best describes your primary job?',\n",
+       "       'How did you usually get to your primary job last week? ',\n",
+       "       'Thinking about your daily commute to work last week, how many minutes did it usually take to get from home to the primary job/work place?',\n",
+       "       'At your primary job, do you have the ability to set or change your own start time?',\n",
+       "       'Do you have the option of working from home or an alternate location instead of going into your primary work place?',\n",
+       "       'How many days per week do you usually work from home or an alternate location?',\n",
+       "       'Which one below describe you best?',\n",
+       "       'Do you own or rent your place of residence?',\n",
+       "       'What is your home type?', 'HHINC', 'HHSIZE', 'CHILDREN',\n",
+       "       'Including yourself, how many people have a driver's license in your household?',\n",
+       "       'VEH', 'available_modes',\n",
+       "       'Do you have a medical condition that makes it difficult to travel outside of the home?',\n",
+       "       'How long have you had this condition?', 'date_time', 'WORKERS',\n",
+       "       'is_ebike', 'HHINC_NUM', 'PINC', 'Mode', 'PINC_NUM', 'VEH_num',\n",
+       "       'DRIVERS', 'DRIVERS_num', 'veh_per_driver'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_merged.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "ec980170",
    "metadata": {},
    "outputs": [],
