updates to scripts
keeping git up to date as I update the paper, changes are messy but need to be kept

--- a/viz_scripts/CanBikeCO_DataFiltering.ipynb
+++ b/viz_scripts/CanBikeCO_DataFiltering.ipynb
@@ -93,6 +93,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "742c133c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59\n",
+      "10827\n",
+      "12\n",
+      "2374\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count the stage and mini users\n",
+    "stage_data = data[data.program=='stage']\n",
+    "print(stage_data.user_id.nunique())\n",
+    "print(len(stage_data))\n",
+    "\n",
+    "mini_data = data[data.program=='prepilot']\n",
+    "print(mini_data.user_id.nunique())\n",
+    "print(len(mini_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "ab83b18e",
    "metadata": {},
