--- a/viz_scripts/CanBikeCO_DataFiltering.ipynb
+++ b/viz_scripts/CanBikeCO_DataFiltering.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6139da5c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "612c368d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b1606878",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "235"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "7c7d1f0f",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ab83b18e",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "83703424",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "164"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c254747b",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "array(['4c', 'cc', 'fc', 'pc', 'sc', 'vail'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "79f074c1",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "209a277b",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ffc7e547",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "66494032",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "0eb32fa4",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "57a92f6a",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "043281f6",
    "metadata": {},
    "outputs": [
@@ -436,6 +436,28 @@
     "\n",
     "a = data[data['AGE']>100]\n",
     "print(len(a)) #should be 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f7b81563",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "194\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## checking minipilot post-filtering numbers\n",
+    "mini_data = data[data.program == 'prepilot']\n",
+    "print(len(mini_data))\n",
+    "print(mini_data.user_id.nunique())\n"
    ]
   },
   {
